# bsc-dissertation-c-java-native-interface-agent-stack-trace-heap-capture

./: README.md
.github/workflows/: cmake-single-platform.yml  codeql-analysis.yml  main.yml
DISSERTATION/: implementation.tex  main.tex  testing-eval.tex
Manchester Dissertation/: conclusions.tex  introduction.tex  my.bib  system-design-choices.tex
c-jvm-agent-lib/: README.md  build.sh  just_run.sh  release.sh  run.sh
c-jvm-agent-lib/c/: README.md  crypto_sample.cpp  openssl_crypto_md5.cpp
c-jvm-agent-lib/c/agent/: CMakeLists.txt  build.sh
c-jvm-agent-lib/c/agent/code/: agent.cpp  common_data_structures.h  exception_handling.cpp  exception_handling.h  hashmap.cpp  hashmap.h  hashmap.h.gch  logging.cpp  logging.h  logging.h.gch  server_communication.cpp  server_communication.h  xml_utils.cpp  xml_utils.h
c-jvm-agent-lib/c/agent/jansson/src/: jansson_config.h.gch  lookup3.h.gch
c-jvm-agent-lib/c/agent/jdk1.8.0_91.jdk/Contents/Home/lib/missioncontrol/Java Mission Control.app/Contents/MacOS/: jmc
c-jvm-agent-lib/c/agent/output/: agent.dylib  agentlib-mac.dylib  agentlib-unix.so.1.0
c-jvm-agent-lib/c/agent/test/: hashmap_test.cpp
c-jvm-agent-lib/java/: .gitignore  MANIFEST.MF  Object.java  build.sh
c-jvm-agent-lib/release/: libCodEvoAgent.dylib
fuelphp-dashboard-portal/: .gitignore  composer.json
fuelphp-dashboard-portal/fuel/app/config/: config.sample.php  crypt.php
scala-api/: .gitignore  build.sbt
scala-api-db/: apps.bson  apps.metadata.json  logs.bson  logs.metadata.json  users.bson  users.metadata.json
scala-api/.bsp/: sbt.json
(+44 files in other folders)
